--- a/Atividades/Perguntas Starter/index.html
+++ b/Atividades/Perguntas Starter/index.html
@@ -384,6 +384,25 @@
 @media (max-width:540px){
   .q-prompt{ font-size:20px; }
 }
+/* ====== ORDER: bandeja fixa; rolagem só nas opções ====== */
+.options.is-order{
+  max-height: 58vh;      /* ajuste se quiser mais/menos área visível */
+  overflow: auto;
+  padding-right: 4px;    /* evita colar no scroll */
+}
+
+/* Deixa o bloco da bandeja + botões fixo no topo do contêiner rolável */
+.build-wrap{
+  position: sticky;
+  top: 0;
+  z-index: 3;
+  background: #f9fbff;   /* mesma cor do card para “colar” visualmente */
+  padding-bottom: 8px;
+  box-shadow: 0 6px 10px -8px rgba(0,0,0,.15); /* sombrazinha sutil opcional */
+}
+
+/* só um respiro entre a bandeja e a grade */
+.build-wrap .build-tray{ margin-bottom: 8px; }
 </style>
 </head>
 <body>
@@ -568,6 +587,7 @@ btnRepeat.onclick = () => {
 
     // Opções
     optionsEl.innerHTML = '';
+    optionsEl.classList.remove('is-order'); // reseta (para não afetar outras questões)
 
 if (q.type === 'order') {
   renderOrderQuestion(q);
@@ -790,6 +810,7 @@ try {
     return `${BASE}/${p}`.replace(/\/+/g,'/');
   }
 function renderOrderQuestion(q){
+  optionsEl.classList.add('is-order'); // ativa layout “bandeja fixa + rolagem nas opções”
   // Normaliza inputs
   const words = q.options.map(w => String(w));
   const answerSeq = (q.answer || []).map(w => String(w));
