--- a/Atividades/Perguntas Starter/index.html
+++ b/Atividades/Perguntas Starter/index.html
@@ -403,6 +403,22 @@
 
 /* só um respiro entre a bandeja e a grade */
 .build-wrap .build-tray{ margin-bottom: 8px; }
+/* ORDER: botão sem ícone, só texto centralizado */
+.option.word-only{
+  gap: 0;
+  justify-content: center;
+}
+.option.word-only .label{
+  font-size: 22px;          /* ajuste se quiser maior/menor */
+  font-weight: 800;
+}
+
+/* Aparência quando desabilitar Undo/Clear após acerto */
+.build-btn:disabled{
+  opacity:.45;
+  pointer-events:none;
+  filter: grayscale(0.2);
+}
 </style>
 </head>
 <body>
@@ -843,9 +859,9 @@ optionsEl.appendChild(grid);
 
   words.forEach(w=>{
     const b = document.createElement('button');
-    b.type='button';
-    b.className='option';
-    b.innerHTML = `<div class="thumb">🔤</div><div class="label">${w}</div>`;
+b.type='button';
+b.className='option word-only';       // <- usa a classe nova
+b.innerHTML = `<div class="label">${w}</div>`;  // <- só texto, sem thumb
     b.onclick = ()=>{
       sTap.play().catch(()=>{});
       // evita exceder contagem da resposta (opcional)
@@ -907,6 +923,10 @@ optionsEl.appendChild(grid);
 
     // Bloqueia toques adicionais
     Array.from(optionsEl.querySelectorAll('.option')).forEach(el=> el.disabled = true);
+
+// >>> NOVO: trava Undo e Clear
+  undoBtn.disabled = true;
+  clearBtn.disabled = true;
   } else {
     sWrong.play().catch(()=>{});
     speakFriendly(['Try again!']);
