--- a/Atividades/Perguntas Starter/index.html
+++ b/Atividades/Perguntas Starter/index.html
@@ -965,32 +965,25 @@ function renderMatchQuestion(q){
   let matched = new Set(); // valores já casados
 
   // Cria um card (texto/ícone à esquerda; imagem ou texto à direita)
-  const makeLeftBtn = (item) => {
-    const b = document.createElement('button');
-    b.type = 'button';
-    b.className = 'option';
-    b.dataset.value = item.value;
+const makeLeftBtn = (item) => {
+  const b = document.createElement('button');
+  b.type = 'button';
+  b.className = 'option';       // só texto, sem thumb
+  b.dataset.value = item.value;
 
-    const thumb = document.createElement('div'); thumb.className='thumb'; thumb.textContent='🔤';
-    const label = document.createElement('div'); label.className='label'; label.textContent=item.label || item.value;
-    b.appendChild(thumb); b.appendChild(label);
+  const label = document.createElement('div');
+  label.className = 'label';
+  label.textContent = item.label || item.value;  // garante um texto
+  b.appendChild(label);
 
-    b.onclick = ()=>{
-      if (b.classList.contains('matched')) return;
-      sTap.play().catch(()=>{});
-      // limpa seleção anterior
-      Array.from(colL.children).forEach(el=>el.classList.remove('selected'));
-      b.classList.add('selected');
-      selectedLeftBtn = b;
-      selectedLeftVal = item.value;
-    };
-    return b;
-  };
+  b.onclick = ()=>{ /* mantém seu handler igual */ };
+  return b;
+};
 
   const makeRightBtn = (item) => {
     const b = document.createElement('button');
     b.type = 'button';
-    b.className = 'option';
+    b.className = 'option word-only';
     b.dataset.value = item.value;
 
     const thumb = document.createElement('div'); thumb.className='thumb';
