--- a/Atividades/Perguntas Starter/index.html
+++ b/Atividades/Perguntas Starter/index.html
@@ -367,6 +367,9 @@
     gap:10px;
   }
   .match-col{ gap:10px; }
+
+  /* ↓ ESTA REGRA FICA DENTRO DO @media */
+  .option.word-only .label{ font-size:20px; }
 }
 
 /* Telas bem baixas (ex.: smartphones pequenos em landscape):
@@ -409,7 +412,9 @@
   justify-content: center;
 }
 .option.word-only .label{
-  font-size: 22px;          /* ajuste se quiser maior/menor */
+  width: 100%;
+  text-align: center;
+  font-size: 22px;
   font-weight: 800;
 }
 
@@ -968,7 +973,7 @@ function renderMatchQuestion(q){
 const makeLeftBtn = (item) => {
   const b = document.createElement('button');
   b.type = 'button';
-  b.className = 'option';       // só texto, sem thumb
+  b.className = 'option word-only';   // adiciona classe auxiliar
   b.dataset.value = item.value;
 
   const label = document.createElement('div');
