--- a/Atividades/Perguntas Starter/index.html
+++ b/Atividades/Perguntas Starter/index.html
@@ -973,15 +973,25 @@ function renderMatchQuestion(q){
 const makeLeftBtn = (item) => {
   const b = document.createElement('button');
   b.type = 'button';
-  b.className = 'option word-only';   // adiciona classe auxiliar
+  b.className = 'option word-only';   // <- só texto, sem thumb
   b.dataset.value = item.value;
 
+  // Só o texto no card
   const label = document.createElement('div');
   label.className = 'label';
-  label.textContent = item.label || item.value;  // garante um texto
+  label.textContent = item.label || item.value;
   b.appendChild(label);
 
-  b.onclick = ()=>{ /* mantém seu handler igual */ };
+  // Selecionar a palavra (fica azul com .selected)
+  b.onclick = () => {
+    if (b.classList.contains('matched')) return;
+    sTap.play().catch(()=>{});
+    Array.from(colL.children).forEach(el => el.classList.remove('selected'));
+    b.classList.add('selected');
+    selectedLeftBtn = b;
+    selectedLeftVal = item.value;
+  };
+
   return b;
 };
 
