--- a/Atividades/Mixed Letters FIXO/index.html
+++ b/Atividades/Mixed Letters FIXO/index.html
@@ -157,13 +157,15 @@
     window.speechSynthesis.onvoiceschanged = initializeVoices;
 
     function speak(text){
-      const synth = window.speechSynthesis;
-      synth.cancel();
-      if (!selectedVoice) initializeVoices();
-      const u = new SpeechSynthesisUtterance(text);
-      u.voice = selectedVoice || synth.getVoices()[0];
-      synth.speak(u);
-    }
+  const synth = window.speechSynthesis;
+  synth.cancel();
+  if (!selectedVoice) initializeVoices();
+
+  const u = new SpeechSynthesisUtterance((text || '').toString());
+  u.voice = selectedVoice || synth.getVoices()[0];
+  u.lang  = (selectedVoice && selectedVoice.lang) ? selectedVoice.lang : 'en-US'; // <-- força EN
+  synth.speak(u);
+}
     function speakWord(w){ speak((w||"").toLowerCase()); }
 
     // --------------- Estado global ---------------
